Se completó la validacion mediante Javascript en la pagina de formularios. Existe un bug: Cuando el la pagina comprueba por errores antes de que aparezca la mitad inferior del formulario, no se hace focus correctamente en los elementos invalidos. Cuando el formulario ya tiene la mitad inferior visible, la validacion si hace focus correctamente en los elementos que lo necesiten (incluidos los dos primeros).

--- a/pagina-web-nambrena/css/xy_input.css
+++ b/pagina-web-nambrena/css/xy_input.css
@@ -158,3 +158,7 @@ input.text {
 	background: -moz-linear-gradient(top,  #575757,  #888);
 	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#575757', endColorstr='#888888');
 }
+
+.error {
+	font-size: 12px;
+}
